Dekanat v.alfa.2.28.10.2025 test start 7