@@ -54,10 +54,7 @@ import com.vaadin.flow.dom.Element;
 import com.vaadin.flow.dom.ElementFactory;
 import com.vaadin.flow.router.PageTitle;
 import com.vaadin.flow.router.Route;
-import com.vaadin.flow.server.StreamResource;
-import com.vaadin.flow.server.StreamResourceRegistry;
-import com.vaadin.flow.server.VaadinService;
-import com.vaadin.flow.server.VaadinServlet;
+import com.vaadin.flow.server.*;
 import jakarta.annotation.security.PermitAll;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -1328,7 +1325,7 @@ public class EnterMarksView extends Div {
     private Map<String, List<Integer>> buildMarksForSummaryReport(List<StudentEntity> students, List<PlansEntity> plans) {
         List<String> studentNames = students.stream()
                 .map(StudentEntity::getFullName)
-                .collect(Collectors.toList());
+                .toList();
 
         Map<String, List<Integer>> marksByStudent = new LinkedHashMap<>();
         for (String studentName : studentNames) {
@@ -1360,17 +1357,21 @@ public class EnterMarksView extends Div {
     }
 
     private void openPdfReport(String fileName, byte[] pdfBytes) {
+        UI ui = UI.getCurrent();
+        if (ui == null) {
+            throw new IllegalStateException("UI is not available for opening the PDF report");
+        }
+
         StreamResource resource = new StreamResource(fileName, () -> new ByteArrayInputStream(pdfBytes));
         resource.setContentType("application/pdf");
+        resource.setCacheTime(0);
 
-        Anchor downloadLink = new Anchor(resource, "");
-        downloadLink.getElement().setAttribute("download", true);
-        downloadLink.getElement().setAttribute("target", "_blank");
-        downloadLink.getElement().getStyle().set("display", "none");
+        StreamRegistration registration = ui.getSession()
+                .getResourceRegistry()
+                .registerResource(resource);
 
-        add(downloadLink);
-        downloadLink.getElement().callJsFunction("click");
-        remove(downloadLink);
+        String resourceUrl = registration.getResourceUri().toString();
+        ui.getPage().open(resourceUrl, "_blank");
     }
 
     private void notifyFeatureInDevelopment() {
